--- a/qos_hw_guidelines.adoc
+++ b/qos_hw_guidelines.adoc
@@ -21,14 +21,14 @@ large pool of `MCID` speeds up this analysis.
 
 [NOTE]
 ====
-To achieve maximum flexibility in the allocation of QoS IDs to workloads, it is
+To maximize flexibility in the allocation of QoS IDs to workloads, it is
 recommended that all resource controllers in the system support an identical
-number of `RCID` and `MCID`. Requests typically need to be processed by multiple
-controllers, such as caches, fabrics, and memory controllers. In such cases, if
-not all controllers accessed by a request support an identical number of IDs,
-software will be constrained, using only the IDs supported by all controllers.
+number of `RCID` and `MCID`, as well as a uniform mode of operation — either
+direct or RCID-prefixed — for determining the effective `MCID`. Uniformity
+ensures that software is not constrained by the lowest common denominator of ID
+support when requests are processed by multiple controllers, such as caches,
+fabrics, and memory controllers.
 ====
-
 
 === Sizing monitoring counters
 
