--- a/qos_capacity.adoc
+++ b/qos_capacity.adoc
@@ -45,7 +45,7 @@ workloads.
 ====
 
 [[CC_REG]]
-.Capacity-controller QoS register layout
+.Capacity-controller QoS Register Layout (size and offset are in bytes)
 [width=100%]
 [%header, cols="^3,10,^4, 18, 5"]
 |===
@@ -62,8 +62,6 @@ workloads.
 |N     |`cc_cunits`       |8       |<<CC_CUNITS, Capacity units
                                     count>>                     | Yes
 |===
-
-The size and offset in <<CC_REG>> are specified in bytes.
 
 The size of the `cc_block_mask` register is determined by the `NCBLKS` field
 of the `cc_capabilities` register but is always a multiple of 8 bytes. The
@@ -86,12 +84,12 @@ value before configuring the capacity controller with capacity allocation for
 that `RCID` is `UNSPECIFIED`.
 
 [[CC_CAP]]
-=== Capacity-controller capabilities (`cc_capabilities`)
+=== Capacity-controller Capabilities (`cc_capabilities`)
 
 The `cc_capabilities` register is a read-only register that holds the
 capacity-controller capabilities.
 
-.Capacity-controller capabilities register fields
+.Capacity-controller Capabilities Register
 [wavedrom, , ]
 ....
 {reg: [
@@ -136,13 +134,13 @@ from 0 to 12. If `RPFX` is 0, `P` is set to 0, and the effective `MCID` is the
 same as the `MCID` in the request.
 
 [[CC_MCTL]]
-=== Capacity usage monitoring control (`cc_mon_ctl`)
+=== Capacity Usage Monitoring Control (`cc_mon_ctl`)
 
 The `cc_mon_ctl` register is used to control monitoring of capacity usage by a
 `MCID`. When the controller does not support capacity usage monitoring the
 `cc_mon_ctl` register is read-only zero.
 
-.Capacity usage monitoring control (`cc_mon_ctl`)
+.Capacity Usage Monitoring Control Register (`cc_mon_ctl`)
 [wavedrom, , ]
 ....
 {reg: [
@@ -169,6 +167,8 @@ fields.
 
 The `OP` field is used to instruct the controller to perform an operation listed
 in <<CC_MON_OP>>.
+
+<<<
 
 [[CC_MON_OP]]
 .Capacity usage monitoring operations (`OP`)
@@ -254,14 +254,14 @@ operation, software must first verify that the `BUSY` bit is 0 before writing
 the `cc_mon_ctl` register.
 
 [[CC_MCTR]]
-=== Capacity usage monitoring counter value (`cc_mon_ctr_val`)
+=== Capacity Usage Monitoring Counter Value (`cc_mon_ctr_val`)
 
 The `cc_mon_ctr_val` is a read-only register that holds a snapshot of the
 counter selected by the `READ_COUNTER` operation. When the controller does not
 support capacity usage monitoring, the `cc_mon_ctr_val` register always reads as
 zero.
 
-.Capacity usage monitoring counter value (`cc_mon_ctr_val`)
+.Capacity Usage Monitoring Counter Value Register (`cc_mon_ctr_val`)
 [wavedrom, , ]
 ....
 {reg: [
@@ -318,7 +318,7 @@ processes.
 ====
 
 [[CC_ALLOC]]
-=== Capacity allocation control (`cc_alloc_ctl`)
+=== Capacity Allocation Control (`cc_alloc_ctl`)
 
 The `cc_alloc_ctl` register is used to configure allocation of capacity to an
 `RCID` per access-type (`AT`). The `OP`, `RCID` and `AT` fields in this register
@@ -326,7 +326,7 @@ are WARL. If a controller does not support capacity allocation then this
 register is read-only zero. If the controller does not support capacity
 allocation per access-type then the `AT` field is read-only zero.
 
-.Capacity allocation control (`cc_alloc_ctl`)
+.Capacity Allocation Control Register (`cc_alloc_ctl`)
 [wavedrom, , ]
 ....
 {reg: [
@@ -350,8 +350,10 @@ require a capacity block mask and/or a capacity unit limit, software must first
 program the `cc_block_mask` and/or the `cc_cunits` register, followed by
 initiating the operation via the `cc_alloc_ctl` register.
 
+<<<
+
 [[CC_ALLOC_OP]]
-.Capacity allocation operations (`OP`)
+.Capacity Allocation Operations (`OP`)
 [width=100%]
 [%header, cols="16,^12,70"]
 |===
@@ -402,6 +404,8 @@ allocation per access-type is supported, identical limits may be configured for
 two or more access-types if different capacity allocation per access-type is not
 required. If capacity is not allocated for each access-type supported by the
 controller, the behavior is `UNSPECIFIED`.
+
+<<<
 
 [NOTE]
 ====
@@ -473,7 +477,7 @@ to a write to the register. The `STATUS` field remains valid until a subsequent
 write to the `cc_alloc_ctl` register.
 
 [[CC_ALLOC_STS]]
-.`cc_alloc_ctl.STATUS` field encodings
+.`cc_alloc_ctl.STATUS` Field Encodings
 [width=100%]
 [%header, cols="12,70"]
 |===
@@ -495,7 +499,7 @@ perform the operation determined by the second write. To ensure proper operation
 software must verify that `BUSY` bit  is 0 before writing any of these registers.
 
 [[CC_BMASK]]
-=== Capacity block mask (`cc_block_mask`)
+=== Capacity Block Mask (`cc_block_mask`)
 
 The `cc_block_mask` is a WARL register. If the controller does not support
 capacity allocation, i.e., `NCBLKS` is 0, then this register is read-only 0.
@@ -543,7 +547,7 @@ provides the `READ_LIMIT` operation which can be requested by writing to the
 `cc_block_mask` register holds the configured _capacity block_ allocation.
 
 [[CC_CUNITS]]
-=== Capacity units (`cc_cunits`)
+=== Capacity Units (`cc_cunits`)
 
 The `cc_cunits` register is a read-write WARL register. If the controller does
 not support capacity allocation (i.e., `NCBLKS` is set to 0), this register
