--- a/qos_identifiers.adoc
+++ b/qos_identifiers.adoc
@@ -17,8 +17,8 @@ To monitor the resource utilization by a workload, CBQRI defines a mechanism to
 configure counters identified by the `MCID` to count events in the resource
 controllers that control accesses to such shared resources.
 
-Guidelines for sizing the QoS IDs and need for differentiated IDs for monitoring
-is discussed in <<QOS_SIZING>>.
+<<QOS_SIZING>> discusses guidelines for sizing the QoS IDs and the need for
+differentiated IDs for monitoring.
 
 [[EMCID]]
 === Associating `RCID` and `MCID` with requests
@@ -35,9 +35,12 @@ the counter and is the effective `MCID`. In the RCID-prefixed mode, the
 controller identifies the counter for monitoring using an effective `MCID`
 computed as:
 
-----
-    Effective MCID = (RCID << P) | (MCID & ((1 << P) - 1))
-----
+[latexmath#eq-2,reftext="equation ({counter:eqs})"]
+++++
+\begin{equation}
+Effective-MCID = (RCID << P) | (MCID & ((1 << P) - 1))
+\end{equation}
+++++
 
 Legal values of `P` range from 0 to 12 and are enumerated in the capability
 register of the controller. Software should use the effective `MCID` as the
@@ -47,9 +50,10 @@ register of the controller. Software should use the effective `MCID` as the
 
 The Ssqosid extension cite:[SSQOSID] introduces a read/write S/HS-mode register
 (`srmcfg`) to configure QoS Identifiers to be used with requests made by the
-hart to shared resources. If extension Smstateen cite:[STATEEN] is implemented
-then bit 55 of `mstateen0` controls access to `srmcfg` from privilege modes less
-than M.
+hart to shared resources. If Smstateen cite:[STATEEN] is implemented then bit 55
+of `mstateen0` controls access to `srmcfg` from privilege modes less than M.
+
+<<<
 
 ==== Device initiated requests
 
