--- a/qos_header.adoc
+++ b/qos_header.adoc
@@ -1,9 +1,9 @@
 [[header]]
 :description: RISC-V Capacity and Bandwidth Controller QoS Register Interface
 :company: RISC-V.org
-:revdate: 04/2023
-:revnumber: 0.1
-:revremark: This document is in development. Assume everything can change. See http://riscv.org/spec-state for details.
+:revdate: 01/2024
+:revnumber: 1.0
+:revremark: This document is in stable state. Assume anything could still change, but limited change should be expected.  See http://riscv.org/spec-state for details.
 :url-riscv: http://riscv.org
 :doctype: book
 :preface-title: Preamble
