--- a/qos_bandwidth.adoc
+++ b/qos_bandwidth.adoc
@@ -161,7 +161,7 @@ all access-types, and the `AT` value is ignored.
 [%header, cols="30,^10,40"]
 |===
 |Event ID      | Encoding ^| Description
-|`None`        | 0         | Counter does not count and retains its value.
+|`None`        | 0         | Counter does not count.
 |`Total Read
   and Write
   byte count`  | 1         | Counter is incremented by the number of bytes
@@ -182,7 +182,7 @@ all access-types, and the `AT` value is ignored.
 When the `EVT_ID` for a `MCID` is programmed with a non-zero and legal value,
 the counter is reset to 0 and starts counting matching events for requests with
 the matching `MCID` and `AT` (if `ATV` is 1). However, if the `EVT_ID` is
-configured as 0, the counter retains its current value but stops counting.
+configured as 0, the counter stops counting.
 
 A controller that does not support monitoring by access-type can hardwire the
 `ATV` and the `AT` fields to 0, indicating that the counter counts requests with
