Update to Frozen

--- a/qos_contributors.adoc
+++ b/qos_contributors.adoc
@@ -3,4 +3,4 @@
 This RISC-V specification has been contributed to directly or indirectly by:
 
 [%hardbreaks]
-Aaron Durbin, Adrien Ricciardi, Allen Baum, Allison Randal, Ambika Krishnamoorthy, Beeman Strong, Daniel Gracia Pérez, David Kruckemeyer, David Weaver, Derek Hower, Drew Fustini, Eric Shiu, Greg Favor, Perrine Peresse, Ravi Sahita, Vedvyas Shanbhogue
+Aaron Durbin, Adrien Ricciardi, Allen Baum, Allison Randal, Ambika Krishnamoorthy, Beeman Strong, Daniel Gracia Pérez, Roy Franz, David Kruckemeyer, David Weaver, Derek Hower, Drew Fustini, Eric Shiu, Greg Favor, Perrine Peresse, Ravi Sahita, Ved Shanbhogue
