--- a/qos_header.adoc
+++ b/qos_header.adoc
@@ -1,9 +1,9 @@
 [[header]]
 :description: RISC-V Capacity and Bandwidth Controller QoS Register Interface
 :company: RISC-V.org
-:revdate: 01/2024
+:revdate: 02/2024
 :revnumber: 1.0
-:revremark: This document is in stable state. Assume anything could still change, but limited change should be expected.  See http://riscv.org/spec-state for details.
+:revremark: This document is in Frozen state. See http://riscv.org/spec-state for details.
 :url-riscv: http://riscv.org
 :doctype: book
 :preface-title: Preamble
@@ -41,11 +41,12 @@ RISC-V CBQRI Task Group
 
 // Preamble
 [WARNING]
-.This document is in the link:http://riscv.org/spec-state[Stable state]
+.This document is in the link:http://riscv.org/spec-state[Frozen state]
 ====
-Assume everything can change. This draft specification will change before
-being accepted as standard, so implementations made to this draft
-specification will likely not conform to the future standard.
+Change is extremely unlikely. A high threshold will be used, and a change will
+only occur because of some truly critical issue being identified during the
+public review cycle. Any other desired or needed changes can be the subject of a
+follow-on new extension.
 ====
 
 [preface]
@@ -55,7 +56,7 @@ Attribution 4.0 International License (CC-BY 4.0). The full
 license text is available at
 https://creativecommons.org/licenses/by/4.0/.
 
-Copyright 2022 by RISC-V International.
+Copyright 2024 by RISC-V International.
 
 [preface]
 include::qos_contributors.adoc[]
@@ -68,5 +69,4 @@ include::qos_iommu.adoc[]
 include::qos_hw_guidelines.adoc[]
 include::qos_sw_guidelines.adoc[]
 //the index must precede the bibliography
-//include::qos_index.adoc[]
 include::qos_biblio.adoc[]
