--- a/qos_identifiers.adoc
+++ b/qos_identifiers.adoc
@@ -57,20 +57,26 @@ of `mstateen0` controls access to `srmcfg` from privilege modes less than M.
 
 ==== Device initiated requests
 
-Devices may be configured with an `RCID` and `MCID` for requests originated 
-from the device if the device implementation supports such capability. The 
-method to configure the QoS identifiers into devices is `UNSPECIFIED`.
+A RISC-V IOMMU cite:[IOMMU] extension to support configuring QoS identifiers is
+specified in <<QOS_IOMMU>>. If the system supports an IOMMU with this extension,
+the IOMMU may be configured with the `RCID` and `MCID` to associate with requests
+from devices and from the IOMMU itself.
 
-Where the device does not natively support being configured with an `RCID`
-and `MCID`, the implementation may provide a shim at the device interface that
-may be configured with the `RCID` and `MCID` that are associated with requests
-originating from the device. The method to configure such QoS identifiers into
-a shim is `UNSPECIFIED`.
+If the system does not support an IOMMU with this extension, then the
+association of `RCID` and `MCID` with requests from devices becomes
+implementation-defined. Such methods may include, but are not limited to, one of
+the following:
 
-If the system supports an IOMMU, then the IOMMU may be configured with the
-`RCID` and `MCID` to associate requests from the device with QoS identifiers.
-The RISC-V IOMMU cite:[IOMMU] extension to support configuring QoS identifiers
-is specified in <<QOS_IOMMU>>.
+* Devices may be configured with an `RCID` and `MCID` for requests originating
+  from the device, provided the device implementation and the bus protocol used
+  by the device support such capabilities. The method to configure the QoS
+  identifiers into devices remains `UNSPECIFIED`.
+
+* Where the device does not natively support being configured with an `RCID`
+  and `MCID`, the implementation may provide a shim at the device interface. This
+  shim may be configured with the `RCID` and `MCID` to associate with requests
+  originating from the device. The method to configure such QoS identifiers into
+  a shim is `UNSPECIFIED`.
 
 === Access-type (`AT`)
 
