--- a/qos_bandwidth.adoc
+++ b/qos_bandwidth.adoc
@@ -149,8 +149,8 @@ listed in <<BC_MON_OP>>.
 | --           | 24-31     | Designated for custom use.
 |===
 
-The `EVT_ID` field uses the `CONFIG_EVENT` operation to program the
-identifier of the event to count in the monitoring counter, selected by `MCID`.
+The `CONFIG_EVENT` operation uses the `EVT_ID` operand to program the identifier of the 
+event to count in the monitoring counter, selected by `MCID`.
 The `AT` field is used to program the access-type to count, and its validity is
 indicated by the `ATV` field. When `ATV` is 0, the counter counts requests with
 all access-types, and the `AT` value is ignored.
